# ElasticFusion

Core/src/: CMakeLists.txt  Deformation.cpp  ElasticFusion.cpp  ElasticFusion.h  GPUTexture.cpp  GPUTexture.h
Core/src/Cuda/: cudafuncs.cu  cudafuncs.cuh  reduce.cu
Core/src/Shaders/: ComputePack.cpp  ComputePack.h  FeedbackBuffer.cpp  FeedbackBuffer.h  copy_unstable.vert  surfels.glsl
Core/src/Utils/: BotFramesOdometry.cpp  BotFramesOdometry.h  OdometryProvider.h  RGBDOdometry.cpp  RGBDOdometry.h
GUI/src/: CMakeLists.txt  MainController.cpp  MainController.h
GUI/src/Tools/: GUI.h  ImagesLogReader.cpp  ImagesLogReader.h
